TIedon lisääminen databaseen

--- a/html/contact.html
+++ b/html/contact.html
@@ -1,133 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="HTML, CSS, BATTERY, HAMK, KOULU, ENERGYDRINK">
-        <meta name="description" content="Tämä sivu on tehty osana kouluprojektia">
-        <meta name="author" content="Teemu, Ada, Laura">
-        <link rel="stylesheet" href="../css/contact.css">
-        <script src="https://kit.fontawesome.com/d7a41c0dba.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
-        <title>CONTACT</title>
-    </head>
-
-    <body>
-        <!--Nav bar & Header/Logo-->
-        <header>
-            <a href="index.html"><h1><img src="../images/batterylogo2.PNG" alt="logo" title="logo1" id="logo1"></h1></a>
-        </header>
-        <nav>
-            <ul id="fontti">
-                <li><a href="aboutus.html">ABOUT US</a></li>
-                <li><a href="Products.html">PRODUCTS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-        </nav>
-        <!--Some text & stuff-->
-        <section class="contact">
-            <div class="content">
-                <h2>Contact Us</h2>
-                <p>
-                  You can contact us, if you wanna give feedback, you find errors from our website,
-                   you have any ideas to us for the future! or any other reason you want!
-                </p>
-            </div>
-            <div class="container">
-                <div class="contactInfo">
-                    <!--1. Info box-->
-                    <div class="box">
-                        <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
-                        <div class="text">
-                            <h3>Address</h3>
-                            <p>
-                                Hämeen ammattikorkeakoulu HAMK,<br>
-                                PL 230 13101 Hämeenlinna,<br>
-                                Finland
-                            </p>
-                        </div>
-                    </div>
-                    <!--2. Info box-->
-                    <div class="box">
-                        <div class="icon"><i class="fa-solid fa-phone"></i></div>
-                        <div class="text">
-                            <h3>Phone</h3>
-                            <p>044 123456</p>
-                        </div>
-                    </div>
-                    <!--3. Info box-->
-                    <div class="box">
-                        <div class="icon"><i class="fa-solid fa-envelope"></i></div>
-                        <div class="text">
-                            <h3>Email</h3>
-                            <p>BatterySuomi@gmail.com</p>
-                        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, BATTERY, HAMK, KOULU, ENERGYDRINK">
+    <meta name="description" content="Tämä sivu on tehty osana kouluprojektia">
+    <meta name="author" content="Teemu, Ada, Laura">
+    <link rel="stylesheet" href="../css/contact.css">
+    <script src="https://kit.fontawesome.com/d7a41c0dba.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
+    <title>CONTACT</title>
+</head>
+<body>
+    <!--Nav bar & Header/Logo-->
+    <header>
+        <a href="index.html"><h1><img src="../images/batterylogo2.PNG" alt="logo" title="logo1" id="logo1"></h1></a>
+    </header>
+    <nav>
+        <ul id="fontti">
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="Products.html">PRODUCTS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
+    <!--Some text & stuff-->
+    <section class="contact">
+        <div class="content">
+            <h2>Contact Us</h2>
+            <p>
+                You can contact us, if you wanna give feedback, you find errors from our website,
+                you have any ideas to us for the future! or any other reason you want!
+            </p>
+        </div>
+        <div class="container">
+            <div class="contactInfo">
+                <!--1. Info box-->
+                <div class="box">
+                    <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
+                    <div class="text">
+                        <h3>Address</h3>
+                        <p>
+                            Hämeen ammattikorkeakoulu HAMK,<br>
+                            PL 230 13101 Hämeenlinna,<br>
+                            Finland
+                        </p>
                     </div>
                 </div>
-                <!--Contact Form w/name, email & message-->
-                <div class="contactForm">
-                    <form id='contactlomake' method='post' action='../php/contact.php'>
-                        <h2>Send Message</h2>
-                        <div class="inputBox">
-                            <input type="text" name="inputti" required="required">
-                            <span>Full Name</span>
-                        </div>
-                        <div class="inputBox">
-                            <input type="text" name="inputti" required="required">
-                            <span>Email</span>
-                        </div>
-                        <div class="inputBox">
-                            <textarea required="required"></textarea>
-                            <span>Type Your Message...</span>
-                        </div>
-                        <div class="inputBox">
-                            <input type="submit" name="inputti" value="Send">
-                        </div>
-                    </form>
+                <!--2. Info box-->
+                <div class="box">
+                    <div class="icon"><i class="fa-solid fa-phone"></i></div>
+                    <div class="text">
+                        <h3>Phone</h3>
+                        <p>044 123456</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <!--Footer-->
-        <footer>
-            <div class="footcont">
-                <div class="row">
-                    <div class="footer-col">
-                        <h4>Links</h4>
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="aboutus.html">About Us</a></li>
-                            <li><a href="Products.html">Products</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h4>Contacts</h4>
-                        <ul>
-                            <li>Phone, 044 123456</li>
-                            <li>BatterySuomi@gmail.com</li>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h4>Info</h4>
-                        <ul>
-                            <li>Web kehitys</li>
-                            <li>Staattisen verkkosivun luonti</li>
-                            <li>Ryhmätyö</li>
-                            <li>Teemu, Laura, Ada</li>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h4>Follow us</h4>
-                        <div class="social-links">
-                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                        </div>
+                <!--3. Info box-->
+                <div class="box">
+                    <div class="icon"><i class="fa-solid fa-envelope"></i></div>
+                    <div class="text">
+                        <h3>Email</h3>
+                        <p>BatterySuomi@gmail.com</p>
                     </div>
                 </div>
             </div>
-        </footer>
-        
-    </body>
+            <!--Contact Form w/name, email & message-->
+            <div class="contactForm">
+                <form id='contactlomake' method='post' action='../php/contact.php'>
+                    <h2>Send Message</h2>
+                    <div class="inputBox">
+                        <input type="text" name="Name" required="required">
+                        <span>Full Name</span>
+                    </div>
+                    <div class="inputBox">
+                        <input type="text" name="Email" required="required">
+                        <span>Email</span>
+                    </div>
+                    <div class="inputBox">
+                        <textarea name="Viesti" required="required"></textarea>
+                        <span>Type Your Message...</span>
+                    </div>
+                    <div class="inputBox">
+                        <input type="submit" name="Nappi" value="Send">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!--Footer-->
+    <footer>
+        <div class="footcont">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Links</h4>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="Products.html">Products</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Contacts</h4>
+                    <ul>
+                        <li>Phone, 044 123456</li>
+                        <li>BatterySuomi@gmail.com</li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Info</h4>
+                    <ul>
+                        <li>Web kehitys</li>
+                        <li>Staattisen verkkosivun luonti</li>
+                        <li>Ryhmätyö</li>
+                        <li>Teemu, Laura, Ada</li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
