--- a/html/contact.html
+++ b/html/contact.html
@@ -68,15 +68,15 @@
                 <form id='contactlomake' method='post' action='../php/contact.php'>
                     <h2>Send Message</h2>
                     <div class="inputBox">
-                        <input type="text" name="Name" required="required">
+                        <input type="text" name="Nimi" required="required">
                         <span>Full Name</span>
                     </div>
                     <div class="inputBox">
-                        <input type="text" name="Email" required="required">
+                        <input type="text" name="Sposti" required="required">
                         <span>Email</span>
                     </div>
                     <div class="inputBox">
-                        <textarea name="Viesti" required="required"></textarea>
+                        <textarea name="MSG" required="required"></textarea>
                         <span>Type Your Message...</span>
                     </div>
                     <div class="inputBox">
