kirjautumis sivun css ja admin panelin css

--- a/html/kirjaudu.html
+++ b/html/kirjaudu.html
@@ -4,8 +4,23 @@
 <meta charset="utf-8">
 <title>Kirjaudu</title>
 <link rel="stylesheet" href="../css/admin.css">
+<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<div class="main">  	
+    <input type="checkbox" id="chk" aria-hidden="true">
+    <div class="signup">
+        <form id="loginForm" onsubmit="lahetaKayttaja(this); return false;">
+            <label for="chk" aria-hidden="true">Sign up</label>
+            <input type='text' name='Tunnus' value='' placeholder='KäyttäjäTunnus...'><br>
+            <input type='password' name='salasana' value='' placeholder='Salasana...'><br>
+            <button type="submit">Log In</button>
+        </form>
+        <p id='result'></p>
+    </div>
+</div>
+
 <script>
 function lahetaKayttaja(lomake){
     var user = {
@@ -29,13 +44,6 @@ function lahetaKayttaja(lomake){
     xmlhttp.send("user=" + jsonUser);    
 }
 </script>
-
-<form id='userlomake' onsubmit='lahetaKayttaja(this); return false;'>
-KäyttäjäTunnus: <input type='text' name='Tunnus' value='' placeholder='KäyttäjäTunnus...'><br>
-salasana: <input type='password' name='salasana' value='' placeholder='Salasana...'><br> 
-<input type='submit' name='ok' value='Lähetä'><br>
-</form>
-<p id='result'></p>
 
 </body>
 </html>
