--- a/html/kirjaudu.html
+++ b/html/kirjaudu.html
@@ -33,7 +33,7 @@ function lahetaKayttaja(lomake){
     xmlhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
             if (this.responseText == "ok") {
-                window.location.assign("../php/Admin_panel.php");
+                window.location.assign("../php/admin_panel.php");
             } else {
                 document.getElementById("result").innerHTML = this.responseText;
             }
